--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,19 @@ body {
 }
 
 .card {
+  border: 1px solid black;
+  background-color: white;
+  border-radius: 10px;
   display: flex;
-  align-items: center;
-  border: 1px solid #ccc;
-  padding: 10px;
-  width: 300px;
-  border-radius: 10%;
+  margin: 10px;
+  margin-bottom: 10px;
+}
+
+.card .image {
+  --size: 128px;
+
+  width: var(--size);
+  height: var(--size);
+  border-radius: 10px;
+  margin: 10px;
 }
